--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,66 @@
-* {padding: 0; margin: 0;}
+* {
+    margin: 0;
+    padding: 0;
+    font-size: 22px;
+    font-family: serif;
+}
+
+body, html {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    margin-top: 50px;
+}
+
+.navbar-brand h1 {
+    font-size: 1.5em;
+    color: #fff;
+    line-height: 1.5em;
+    padding: 0;
+    margin-top: -10px;
+}
+
+.navbar-default {
+    background: #1abc9c;
+    border: 0;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #000;
+}
+
+.navbar-nav>li:nth-child(2) {
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    background: #2ecc71;
+    color: #fff;
+}
+
+.navbar-toggle {
+    background: #000;
+    border: #000;
+}
+
+h2 {
+    margin-top: 135px;
+    margin-bottom: 55px;
+}
+
+#info {
+    background-color: #27ae60;
+    padding: 25px;
+} 
+
+#info span {
+    font-weight: bold;
+}
+
+#info p:nth-child(2) {
+    padding-top: 22px;
+}
+
