--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-size: 22px;
     font-family: serif;
+    box-sizing: border-box;
 }
 
 body, html {
@@ -64,3 +65,7 @@ h2 {
     padding-top: 22px;
 }
 
+.box {
+    padding: 12px;
+    background-color: aqua;
+}
